--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
+  "name": "adobe-script-fast-build",
+  "description": "Adobe Script Fast Build",
+  "version": "0.0.1",
+  "license": "MIT",
+  "author": "赵大牛",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
-  "packageManager": "pnpm@10.5.2",
-  "devDependencies": {
-    "@rollup/plugin-typescript": "^12.1.2",
-    "rolldown": "1.0.0-beta.7",
-    "types-for-adobe": "^7.2.2",
-    "typescript": "^5.8.2"
-  }
+  "bin": {
+    "estk-create": "./index.js"
+  },
+  "files": [
+    "index.js",
+    "LICENSE",
+    "README.md"
+  ]
 }
